--- a/conf/example-config.json
+++ b/conf/example-config.json
@@ -48,6 +48,8 @@
     "warn",
     "unwarn",
     "doudou",
+    "doudoutop",
+    "honortop",
     "clear_my_48h_message",
     "chat_member_verify",
     "chat_limit",
